Start building UI

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,27 @@
     <title>Battleship</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="header">
+        <h1>Battleship</h1>
+    </div>
+    <div class="main-container">
+        <div class="main-menu-container">
+            <button id="new-game-button" onclick="handleStartGame()">New Game</button>
+        </div>
+        <div class="game-container hidden">
+            <div class="player-board">
+                <h2>Player</h2>
+                <div class="grid">
+
+                </div>
+            </div>
+            <div class="ai-board">
+                <h2>AI</h2>
+                <div class="grid">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
