Add ship placement, need to add check to see if adjacent cells already have a freaking boat

--- a/src/index.html
+++ b/src/index.html
@@ -21,17 +21,18 @@
                 <div class="grid">
 
                 </div>
+                <div class="controls">
+                    <div class="ship-placement">
+                        <p>Ships left to place:</p>
+                        <p>Press R to rotate</p>
+                    </div>
+                </div>
             </div>
             <div class="ai-board">
                 <h2>AI</h2>
                 <div class="grid">
                     
                 </div>
-            </div>
-        </div>
-        <div class="controls">
-            <div class="ship-placement">
-                <p>Press R to rotate</p>
             </div>
         </div>
     </div>
