Set up changing phase and hovering over enemy board

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="header">
-        <h1>Battleship</h1>
+        <div class="heading">
+            <h1>Battleship</h1>
+        </div>
+        <div class="phase-display">
+            
+        </div>
     </div>
     <div class="main-container">
         <div class="main-menu-container">
